Requests timeout and retrying. Auth service (#2)
* feat:
Added timeout for http servers and
database operations
Implemented auth service
Implemented auth unary interceptor
Added common logick of microservices to core lib
Added mongo init rerty policy
Added grpcc lints to core lib (with keepalive connection)
